--- a/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
+                    <li>@Html.ActionLink("Vehiculo", "Index", "Vehiculo")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
