- Creacion de modelo planificacion, y mvc entity del mismo

--- a/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
                     <li>@Html.ActionLink("Vehiculo", "Index", "Vehiculo")</li>
+                    <li>@Html.ActionLink("Planificacion", "Index", "Planificacion")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
