--- a/GeoAgenda/GeoAgenda/Views/Planificacion/Delete.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Planificacion/Delete.cshtml
@@ -12,6 +12,22 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.cliente.RazonSocial)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.cliente.RazonSocial)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.vehiculo.Marca)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.vehiculo.Marca)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.fechaEnvio)
         </dt>
 
