--- a/GeoAgenda/GeoAgenda/Views/Planificacion/Index.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Planificacion/Index.cshtml
@@ -12,25 +12,28 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.cliente.RazonSocial)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.vehiculo.Marca)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.fechaEnvio)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.horaEnvio)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.cliente.RazonSocial)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.cliente.Direccion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.vehiculo.Conductor)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.cliente.RazonSocial)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.vehiculo.Marca)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.fechaEnvio)
         </td>
