--- a/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
+                    <li>@Html.ActionLink("Conductor", "Index", "Conductor")</li>
                     <li>@Html.ActionLink("Vehiculo", "Index", "Vehiculo")</li>
                     <li>@Html.ActionLink("Planificacion", "Index", "Planificacion")</li>
                 </ul>
