--- a/GeoAgenda/GeoAgenda/Views/Cliente/Details.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Cliente/Details.cshtml
@@ -11,43 +11,19 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.sucursal.Direccion)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.sucursal.Direccion)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.RazonSocial)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.RazonSocial)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Direccion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Direccion)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NombreContacto)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NombreContacto)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Telefono)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Telefono)
         </dd>
 
         <dt>
@@ -64,22 +40,6 @@
 
         <dd>
             @Html.DisplayFor(model => model.DV)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.latitud)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.latitud)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.longitud)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.longitud)
         </dd>
 
         <dt>
