--- a/GeoAgenda/GeoAgenda/Views/Cliente/Index.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Cliente/Index.cshtml
@@ -12,31 +12,16 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.sucursal.Direccion)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.RazonSocial)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Direccion)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NombreContacto)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Telefono)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.RUC)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.DV)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.latitud)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.longitud)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Estado)
@@ -47,31 +32,16 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.sucursal.Direccion)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.RazonSocial)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Direccion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NombreContacto)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Telefono)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.RUC)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DV)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.latitud)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.longitud)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Estado)
