--- a/GeoAgenda/GeoAgenda/Views/Conductor/Create.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Conductor/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeoAgenda.Models.Conductor
+﻿@model GeoAgenda.Models.ConductorView
 
 @{
     ViewBag.Title = "Create";
@@ -6,7 +6,8 @@
 
 <h2>Create</h2>
 
-@using (Html.BeginForm()) 
+
+@using (Html.BeginForm("Create", "Conductor", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -23,6 +24,23 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.NroRegistro, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.NroRegistro, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NroRegistro, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Foto, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <span class="btn btn-defaul btn-file">
+                    @Html.TextBoxFor(model => model.Foto, new { type = "file" })
+                </span>
+            </div>
+        </div>
+
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
@@ -33,3 +51,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
