--- a/GeoAgenda/GeoAgenda/Views/MarcaVehiculo/Delete.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/MarcaVehiculo/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeoAgenda.Models.Conductor
+﻿@model GeoAgenda.Models.MarcaVehiculo
 
 @{
     ViewBag.Title = "Delete";
@@ -8,15 +8,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Conductor</h4>
+    <h4>MarcaVehiculo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.DisplayNameFor(model => model.modelo.NombreModelo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nombre)
+            @Html.DisplayFor(model => model.modelo.NombreModelo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.NombreMarca)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.NombreMarca)
         </dd>
 
     </dl>
