--- a/GeoAgenda/GeoAgenda/Views/ModeloVehiculo/Create.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/ModeloVehiculo/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeoAgenda.Models.Conductor
+﻿@model GeoAgenda.Models.ModeloVehiculo
 
 @{
     ViewBag.Title = "Create";
@@ -6,19 +6,20 @@
 
 <h2>Create</h2>
 
+
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Conductor</h4>
+        <h4>ModeloVehiculo</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.Nombre, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NombreModelo, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Nombre, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nombre, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.NombreModelo, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NombreModelo, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -33,3 +34,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
