--- a/GeoAgenda/GeoAgenda/Views/ModeloVehiculo/Delete.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/ModeloVehiculo/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeoAgenda.Models.Conductor
+﻿@model GeoAgenda.Models.ModeloVehiculo
 
 @{
     ViewBag.Title = "Delete";
@@ -8,23 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Conductor</h4>
+    <h4>ModeloVehiculo</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Nombre)
+            @Html.DisplayNameFor(model => model.NombreModelo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NroRegistro)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NroRegistro)
+            @Html.DisplayFor(model => model.NombreModelo)
         </dd>
 
     </dl>
