--- a/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
@@ -25,8 +25,12 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Cliente", "Index", "Cliente")</li>
+                    <li>@Html.ActionLink("Sucursal", "Index", "Sucursal")</li>
                     <li>@Html.ActionLink("Conductor", "Index", "Conductor")</li>
                     <li>@Html.ActionLink("Vehiculo", "Index", "Vehiculo")</li>
+                    <li>@Html.ActionLink("MarcaVehiculo", "Index", "MarcaVehiculo")</li>
+                    <li>@Html.ActionLink("ModeloVehiculo", "Index", "ModeloVehiculo")</li>
+                    <li>@Html.ActionLink("Entrega", "Index", "Entrega")</li>
                     <li>@Html.ActionLink("Planificacion", "Index", "Planificacion")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
