--- a/GeoAgenda/GeoAgenda/Views/Sucursal/Delete.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Sucursal/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model GeoAgenda.Models.Cliente
+﻿@model GeoAgenda.Models.Sucursal
 
 @{
     ViewBag.Title = "Delete";
@@ -8,47 +8,47 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Cliente</h4>
+    <h4>Sucursal</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.sucursal.Direccion)
+            @Html.DisplayNameFor(model => model.Direccion)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.sucursal.Direccion)
+            @Html.DisplayFor(model => model.Direccion)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.RazonSocial)
+            @Html.DisplayNameFor(model => model.contactoSucursal)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.RazonSocial)
+            @Html.DisplayFor(model => model.contactoSucursal)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.RUC)
+            @Html.DisplayNameFor(model => model.telefonoSucursal)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.RUC)
+            @Html.DisplayFor(model => model.telefonoSucursal)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.DV)
+            @Html.DisplayNameFor(model => model.latitudSucursal)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.DV)
+            @Html.DisplayFor(model => model.latitudSucursal)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Estado)
+            @Html.DisplayNameFor(model => model.longitudSucursal)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Estado)
+            @Html.DisplayFor(model => model.longitudSucursal)
         </dd>
 
     </dl>
