--- a/GeoAgenda/GeoAgenda/Views/Planificacion/Delete.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Planificacion/Delete.cshtml
@@ -20,11 +20,19 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.vehiculo.Marca)
+            @Html.DisplayNameFor(model => model.conductos.Nombre)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.vehiculo.Marca)
+            @Html.DisplayFor(model => model.conductos.Nombre)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.vehiculo.Kilometraje)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.vehiculo.Kilometraje)
         </dd>
 
         <dt>
