--- a/GeoAgenda/GeoAgenda/Views/Planificacion/Index.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Planificacion/Index.cshtml
@@ -15,7 +15,10 @@
             @Html.DisplayNameFor(model => model.cliente.RazonSocial)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.vehiculo.Marca)
+            @Html.DisplayNameFor(model => model.conductos.Nombre)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.vehiculo.Kilometraje)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.fechaEnvio)
@@ -32,7 +35,10 @@
             @Html.DisplayFor(modelItem => item.cliente.RazonSocial)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.vehiculo.Marca)
+            @Html.DisplayFor(modelItem => item.conductos.Nombre)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.vehiculo.Kilometraje)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.fechaEnvio)
