--- a/GeoAgenda/GeoAgenda/Views/Vehiculo/Details.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Vehiculo/Details.cshtml
@@ -11,35 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.conductor.Nombre)
+            @Html.DisplayNameFor(model => model.marca.NombreMarca)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.conductor.Nombre)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Marca)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Marca)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Modelo)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Modelo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FechaFabricacion)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FechaFabricacion)
+            @Html.DisplayFor(model => model.marca.NombreMarca)
         </dd>
 
         <dt>
