Inicio Maestro-Detalle

--- a/GeoAgenda/GeoAgenda/Views/Planificacion/Index.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Planificacion/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.conductos.Nombre)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.vehiculo.Kilometraje)
+            @Html.DisplayNameFor(model => model.vehiculo.marca.NombreMarca)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.fechaEnvio)
@@ -38,7 +38,7 @@
             @Html.DisplayFor(modelItem => item.conductos.Nombre)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.vehiculo.Kilometraje)
+            @Html.DisplayFor(modelItem => item.vehiculo.marca.NombreMarca)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.fechaEnvio)
