--- a/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                     <li>@Html.ActionLink("MarcaVehiculo", "Index", "MarcaVehiculo")</li>
                     <li>@Html.ActionLink("ModeloVehiculo", "Index", "ModeloVehiculo")</li>
                     <li>@Html.ActionLink("Entrega", "Index", "Entrega")</li>
-                    <li>@Html.ActionLink("Planificacion", "Index", "Planificacion")</li>
+                    <li>@Html.ActionLink("HojaRuta", "Create", "HojaRuta")</li>
 
                     @if (User.Identity.IsAuthenticated)
                     {
