--- a/GeoAgenda/GeoAgenda/Views/HojaRuta/Create.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/HojaRuta/Create.cshtml
@@ -22,15 +22,6 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IdCliente, "IdCliente", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })
-
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.IdConductor, "IdConductor", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("IdConductor", null, htmlAttributes: new { @class = "form-control" })
@@ -40,12 +31,14 @@
         </div>
 
 
+
         <table>
             <thead>
                 <tr>
 
                     <th>Hora</th>
                     <th>Descripcion</th>
+                    <th>Cliente</th>
                     <th><button type="submit" name="operacion" data-val="false" value="agregar-detalle">Agregar Detalle</button></th>
                 </tr>
             </thead>
@@ -60,6 +53,7 @@
 
                             <td>@Html.TextBox("Detalle[" + i + "].Hora", item.Hora)</td>
                             <td>@Html.TextBox("Detalle[" + i + "].Descripcion", item.Descripcion)</td>
+                            <td>@Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control" })</td>
                             <td><button type="submit" name="operacion" value="eliminar-detalle-@i">Eliminar</button></td>
                         </tr>
                         i++;
