--- a/GeoAgenda/GeoAgenda/Views/HojaRuta/Create.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/HojaRuta/Create.cshtml
@@ -26,7 +26,6 @@
             <div class="col-md-10">
                 @Html.DropDownList("IdConductor", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IdConductor, "", new { @class = "text-danger" })
-
             </div>
         </div>
 
@@ -53,9 +52,9 @@
 
                             <td>@Html.TextBox("Detalle[" + i + "].Hora", item.Hora)</td>
                             <td>@Html.TextBox("Detalle[" + i + "].Descripcion", item.Descripcion)</td>
-                            <td>@Html.DropDownList("Detalle[" + i + "].IdCliente", 
-                               new SelectList(ViewBag.Tipo, "IdCliente", "RazonSocial", item.IdCliente))</td>
-                            @*<td>@Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control" })</td>*@
+                            
+                            <td>@Html.DropDownList("IdCliente", null, htmlAttributes: new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.IdCliente, "", new { @class = "text-danger" })</td>
                             <td><button type="submit" name="operacion" value="eliminar-detalle-@i">Eliminar</button></td>
                         </tr>
                         i++;
