Cambio en el Index Agregado logos

--- a/GeoAgenda/GeoAgenda/Views/Home/Index.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/Home/Index.cshtml
@@ -3,29 +3,30 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1 align="center">GeoAgenda</h1>
+    <p class="lead" align="center">Sistema de agendamiento de cargas.</p>
+    <img src="~/Content/Logos/GeoLogo.jpg" style="width:304px;height:228px;margin:0px auto;display:block">
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Carga de Clientes</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Agregue los clientes, con su latitud y longitud para tener el lugar exacto del local.
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <img src="~/Content/Logos/GeoCliente.png" alt="Mountain View" style="width:304px;height:228px;">
+        <p><a href="~/Cliente/" class="btn btn-primary btn-lg">Empezar &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Gestion de Vehiculos</h2>
+        <p>Vea los vehiculos que se tiene y asigne conductores a los mismos</p>
+        <img src="~/Content/Logos/GeoVehiculo.jpg" alt="Mountain View" style="width:304px;height:228px;">
+        <p><a href="~/Vehiculo/" class="btn btn-primary btn-lg">Empezar &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Visualizacion de rutas</h2>
+        <p>Trace rutas para llegar a los clientes</p>
+        <img src="~/Content/Logos/GeoRuta.jpg" alt="Mountain View" style="width:304px;height:228px;">
+        <p><a href="~/HojaRuta/Create" class="btn btn-primary btn-lg">Empezar &raquo;</a></p>
     </div>
 </div>
