--- a/GeoAgenda/GeoAgenda/Views/HojaRuta/Create.cshtml
+++ b/GeoAgenda/GeoAgenda/Views/HojaRuta/Create.cshtml
@@ -67,7 +67,7 @@
 
 
         <p>
-            <input type="submit" class="btn btn-primary" value="Create" />
+            <input type="submit" class="btn btn-primary" value="CrearHojaRuta" />
         </p>
 
 
